--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>Hello World! </h1>
+<hmtl>
+  <title>
+    Hello and welcome.
+    </tite>
+  
+  <body>
+    <h1>hello.</h1>
+  </body>
+  
+  <style>
+    body { 
+      backgorund-color:black;
+      color:#fff;
+      text-align:center;
+    }
+  </style>
+      
+   
+      
+</hmtl>
