--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My First Webpage</title>
+    <title>Welcome</title>
   </head>
   <body>
-    <h1>Happy Coding</h1>
-    <p>Hello world!</p>
+    <h1>Hello there,</h1>
+    <p>Welcome to my Github site.</p>
   </body>
 </html>
