--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+    <div class="content">
     <h1>Hello there,</h1>
     <p>Welcome to my Github site.</p>
+    </div>
   </body>
 </html>
