--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <div class="content">
       <h1>Hello there,</h1>
+      <p><img src="its fine.jpg" /></P>
       <p>Welcome to my Github site.</p>
     </div>
   </body>
