--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="content">
       <h1>Hello there,</h1>
-      <p><img src="thisisfine.jpg" /></p>
+      <p><img src="thisisfine1.jpg" /></p>
       <p>Welcome to my Github site.</p>
     </div>
   </body>
