--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+</style>
     <title>Welcome</title>
-   <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@200&family=Orelega+One&display=swap" rel="stylesheet">
-    
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
