--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <h1>Hello there,</h1>
       <p><img src="thisisfine1.jpg" /></p>
       <p>Welcome to my Github site.</p>
+      <audio controls>
+  <source src="DOMO.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+</audio>
     </div>
   </body>
 </html>
