--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
+    <script src="p5.js"></script>
+  <script src="p5.sound.js"></script>
+  <script src="sketch.js"></script>
     <div class="content">
       <h1>Hello there,</h1>
       <p><img src="thisisfine1.jpg" /></p>
