--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <script src="sketch.js"></script>
     <div class="content">
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap');
+<link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
 </style>
     <title>Welcome</title>
     <link rel="stylesheet" type="text/css" href="index.css">
