--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
       <h1>Hello there,</h1>
-      <p><img src="thisisfine1.jpg" /></p>
+      <p><img src="me.jpg" /></p>
       <p>Welcome to my Github site.</p>
       <audio controls>
   <source src="DOMO.mp3" type="audio/mpeg">
