--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <h1>Hello there,</h1>
       <p><img src="me.jpg" /></p>
       <p>Welcome to my Github site.</p>
+    <a href="about.md">Click here to visit my about page!</a>
+    
+    
       <audio controls>
   <source src="DOMO.mp3" type="audio/mpeg">
   Your browser does not support the audio tag.
