--- a/about.html
+++ b/about.html
@@ -1,48 +1,14 @@
-<head>
-  <script language="javascript" type="text/javascript" src="../../lib/p5.js"></script>
+<!DOCTYPE html>
+<html>
+  <head>
+    About me
+    <style>
+      <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+    </style>
+    <title>Welcome</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+  </head>
+  <body>
+      <h1>Hello there,</h1>
 
-  <script language="javascript" type="text/javascript" src="../../lib/addons/p5.dom.js"></script> 
-
-  <script language="javascript" type="text/javascript" src="../../lib/p5.sound.js"></script> 
-
-  <script language="javascript" type="text/javascript" src="sketch.js"></script> 
-
-</head>
-
-let osc, playing, freq, amp;
-
-function setup() {
-  let cnv = createCanvas(100, 100);
-  cnv.mousePressed(playOscillator);
-  osc = new p5.Oscillator('sine');
-}
-
-function draw() {
-  background(220)
-  freq = constrain(map(mouseX, 0, width, 100, 500), 100, 500);
-  amp = constrain(map(mouseY, height, 0, 0, 1), 0, 1);
-
-  text('tap to play', 20, 20);
-  text('freq: ' + freq, 20, 40);
-  text('amp: ' + amp, 20, 60);
-
-  if (playing) {
-    // smooth the transitions by 0.1 seconds
-    osc.freq(freq, 0.1);
-    osc.amp(amp, 0.1);
-  }
-}
-
-function playOscillator() {
-  // starting an oscillator on a user gesture will enable audio
-  // in browsers that have a strict autoplay policy.
-  // See also: userStartAudio();
-  osc.start();
-  playing = true;
-}
-
-function mouseReleased() {
-  // ramp amplitude to 0 over 0.5 seconds
-  osc.amp(0, 0.5);
-  playing = false;
-}
