--- a/about.html
+++ b/about.html
@@ -11,4 +11,6 @@
   </head>
   <body>
       <h1>Hello there,</h1>
+     <a href="index.html">Click here to go back to the homepage!</a>
+     <a href="about.html">Click here to visit my about page!</a>
 
