--- a/about.html
+++ b/about.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    About me
-    <style>
-      <link rel="preconnect" href="https://fonts.gstatic.com"> 
-<link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
-    </style>
-    <title>Welcome</title>
+    
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
       <h1>Hello there,</h1>
+     <style>
+      <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+    </style>
      <a href="index.html">Click here to go back to the homepage!</a>
      <a href="about.html">Click here to visit my about page!</a>
 
