--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
      <style>
       <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+       <link rel="stylesheet" type="text/css" href="index.css">
     </style>
      <a href="index.html">Click here to go back to the homepage!</a>
      <a href="about.html">Click here to visit my about page!</a>
