--- a/about.html
+++ b/about.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
-    <title>About Me</title>
+    <script src="p5.js"></script>
+  <script src="p5.sound.js"></script>
+  <script src="sketch.js"></script>
+    <div class="content">
+    <style>
+<link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
+</style>
+    <title align="center">Welcome</title>
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-      <h1>Hello there,</h1>
-     <style>
-      <link rel="preconnect" href="https://fonts.gstatic.com"> 
-<link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
-       <link rel="stylesheet" type="text/css" href="index.css">
-    </style>
-     <a href="index.html">Click here to go back to the homepage!</a>
-     <a href="about.html">Click here to visit my about page!</a>
+      <h1 align="center">Hello there,</h1>
+     
+      <p align="center">Welcome to my Github site.</p>
+    <a href="about.html" align="center">Click here to visit my about page!</a>
+    </div>
+  </body>
+</html>
+<p><a href="index.html" align="center">Click here to go back to the homepage!</a></p>
+<p><a href="about.html" align="center">Click here to visit my about page!</a></p>
 
