--- a/about.html
+++ b/about.html
@@ -9,14 +9,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
 </style>
-    <title align="center">Welcome</title>
+    <title align="center">About </title>
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-      <h1 align="center">Hello there,</h1>
+      <h1 align="center">About me</h1>
      
-      <p align="center">Welcome to my Github site.</p>
-    <a href="about.html" align="center">Click here to visit my about page!</a>
+    <p align="center">Portfolio</p>
     </div>
   </body>
 </html>
