align center change

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
       <h1 align="center">About me</h1>
      
     <p align="center">Portfolio</p>
-    <p><a href="index.html" align="center">Click here to go back to the homepage!</a></p>
-    <p><a href="about.html" align="center">Click here to visit my about page!</a></p>
+    <p><a align="center" href="index.html">Click here to go back to the homepage!</a></p>
+    <p><a align="center" href="about.html">Click here to visit my about page!</a></p>
     </div>
   </body>
 </html>
