--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
     <p align="center">Portfolio</p>
     <p><a align="center" href="index.html">Click here to go back to the homepage!</a></p>
     <p><a align="center" href="about.html">Click here to visit my about page!</a></p>
+    <p><a align="center" href="sketch.js">Click here to visit my Sketch page!</a></p>
     </div>
   </body>
 </html>
