--- a/about.html
+++ b/about.html
@@ -16,9 +16,11 @@
       <h1 align="center">About me</h1>
      
     <p align="center">Portfolio</p>
-    <p><a align="center" href="index.html">Click here to go back to the homepage!</a></p>
-    <p><a align="center" href="about.html">Click here to visit my about page!</a></p>
-    <p><a align="center" href="sketch.js">Click here to visit my Sketch page!</a></p>
+    <p align="center">
+  <b>Some Links:</b><br>
+  <a href="index.html">Go Back</a> |
+  <a href="example/sketch.js">sketch</a> |
+  <br><br>
     </div>
   </body>
 </html>
