--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p align="center">Welcome to my Github site.</p>
     <p align="center">
   <b>Some Links:</b><br>
-  <a href="about.hmtl">Link 1</a> |
+  <a href="about.html">About</a> |
   <a href="example/sketch.js">Link 2</a> 
   <br><br>
     
