--- a/about.html
+++ b/about.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="p5.js"></script>
-  <script src="p5.sound.js"></script>
-  <script src="sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="../../lib/p5.js"></script>
+
+  <script language="javascript" type="text/javascript" src="../../lib/addons/p5.dom.js"></script> 
+
+  <script language="javascript" type="text/javascript" src="../../lib/p5.sound.js"></script> 
+
+  <script language="javascript" type="text/javascript" src="sketch.js"></script> 
+
     <div class="content">
     <style>
 <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100&display=swap" rel="stylesheet">
 </style>
+       <script src='sketch.js'></script>
     <title align="center">About </title>
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
