--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <p align="center">
   <b>Some Links:</b><br>
   <a href="index.html">Go Back</a> |
-  <a href="example/sketch.js">sketch</a> |
+  <a href="synth">sketch</a> |
   <br><br>
     </div>
   </body>
