--- a/synth.html
+++ b/synth.html
@@ -1,4 +1,5 @@
 <head>
+  <script src='sketch.js'></script>
   <script language="javascript" type="text/javascript" src="../../lib/p5.js"></script>
 
   <script language="javascript" type="text/javascript" src="../../lib/addons/p5.dom.js"></script> 
