--- a/synth.html
+++ b/synth.html
@@ -1,5 +1,5 @@
 <head>
-  <script src='sketch.js'></script>
+  <script src='https://amandajg13.github.io/example-class/sketch.js'></script>
   <script language="javascript" type="text/javascript" src="../../lib/p5.js"></script>
 
   <script language="javascript" type="text/javascript" src="../../lib/addons/p5.dom.js"></script> 
